[workspace]
members = [
  "aoc-lib",
  "aoc-codegen",
  "aoc-codegen/aoc-codegen-test",
  "day-01",
  "day-02",
  "day-03",
  "day-04",
  "day-05",
  "day-06",
  "day-07",
  "day-08",
  "day-09",
  "day-10",
  "day-11",
  "day-12",
  "day-13",
  "day-14",
  "day-15",
  "day-16"
]

[workspace.dependencies]
aoc-lib = { path = "aoc-lib" }
aoc-codegen = { path = "aoc-codegen" }
